--- a/src/main/resources/templates/join/joinForm.html
+++ b/src/main/resources/templates/join/joinForm.html
@@ -11,24 +11,20 @@
 <section>
   <p class="join-text" th:text="${#messages.msg('label.join')}">회원가입</p>
 
-  <form th:action th:object="${joinForm}" method="post">
+  <form>
     <label class="join-label" th:text="${#messages.msg('label.email')}">이메일</label>
-    <p class="field-error" th:errors="*{joinMail}" id="email-fail">이메일 형식 오류</p>
-    <div>
-      <input type="text" th:field="*{joinMail}" class="join-email" placeholder="이메일을 입력해주세요.">
-    </div>
+    <input type="text" class="join-email" placeholder="이메일을 입력해주세요.">
     <p class="join-explication" th:text="${#messages.msg('explication.email')}"
        id="email-exp" style="margin-bottom: 20px;">아이디로 사용할 이메일을 입력해주세요.</p>
 
     <label class="join-label" th:text="${#messages.msg('label.password')}">비밀번호</label>
-    <p class="field-error" th:errors="*{joinRawPw}" id="password-msg">비밀번호 오류</p>
-    <input type="password" th:field="*{joinRawPw}" class="join-input" placeholder="비밀번호">
+    <input type="password" class="join-input" placeholder="비밀번호">
     <p class="join-explication" th:text="${#messages.msg('explication.password')}">8자 이상의 비밀번호를 입력해주세요.</p>
 
-    <button type="submit" id="join-exec-btn" class="common-btn join-btn-active"
+    <button type="button" id="join-exec-btn" class="common-btn join-btn-active"
             style="margin-bottom: 20px;" th:text="${#messages.msg('label.join')}">회원 가입</button>
     <div style="margin-bottom: 160px;">
-      <a id="gotoLogin" th:href="@{/login}" th:text="${#messages.msg('label.gotoLogin')}">로그인 바로가기</a>
+      <a id="gotoLogin" th:href="@{/members/login}" th:text="${#messages.msg('label.gotoLogin')}">로그인 바로가기</a>
     </div>
   </form>
 </section>
