[feature/view-login] 게시글 등록 페이지 수정 (js, css, html)

--- a/src/main/resources/templates/board/addForm.html
+++ b/src/main/resources/templates/board/addForm.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 <section>
-    <article id="bucket-add-wrapper">
-        <span class="bucket-content-txt" id="content-title">제목</span>
-        <input type="text" placeholder="제목 입력" id="bucketName">
+    <h2>게시글 작성</h2>
+    <article>
+        <span class="board-content-txt" id="content-title">제목 : </span>
+        <input type="text" placeholder="제목 입력" id="boardName">
     </article>
 
     <article id="bucket-editor-wrapper">
@@ -20,8 +21,8 @@
     </article>
 
     <div class="btn-wrapper">
-        <button type="button" class="bucket-cancel-btn" onclick="cancelAdd();">취소</button>
-        <button type="button" class="bucket-add-btn" onclick="addBoard();">등록</button>
+        <button type="button" class="board-cancel-btn" onclick="cancelAdd();">취소</button>
+        <button type="button" class="board-add-btn" onclick="addBoard();">등록</button>
     </div>
 </section>
 </body>
