--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <div><span th:text="${username}"></span> <span> 님 반갑습니다. </span></div>
 
     <ul>
-        <li>게시글 목록보기</li>
+        <li onclick="goBoardListPage();">게시글 목록보기</li>
         <li onclick="goBoardAddPage();">게시글 등록하기</li>
     </ul>
 </body>
