[feature/board-lookup] 게시글 조회 기능 추가로 인한 변경 처리

--- a/src/main/resources/static/css/boardAdd.css
+++ b/src/main/resources/static/css/boardAdd.css
@@ -5,8 +5,7 @@ section {
     display: inline-block;
     width: 1280px;
     position: absolute;
-    left: 50%;
-    margin-left: -540px;
+    left: calc(50% - 640px);
 }
 article {
     background: #FFF;
