--- a/src/main/resources/templates/board/lookup.html
+++ b/src/main/resources/templates/board/lookup.html
@@ -15,7 +15,7 @@
   <section>
     <h2>게시글 조회</h2>
     <article>
-      <table th:attr="bid=${boardInfo.boardId}">
+      <table id="board-info-tbl" th:attr="bid=${boardInfo.boardId}">
         <colgroup>
           <col style="width: 10%;">
           <col >
@@ -26,7 +26,7 @@
           <td>제목</td>
           <td th:text="${boardInfo.boardTitle}"></td>
           <td>작성자</td>
-          <td th:text="${boardInfo.memberId}"></td>
+          <td id="board-writer" th:text="${boardInfo.memberId}"></td>
         </tr>
         <tr>
           <td>수정일자</td>
